<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference android:title="@string/prefsWifiUpdateTitle"
		android:key="wifiUpdate" android:summaryOn="@string/prefsWifiUpdateSummaryOn"
		android:summaryOff="@string/prefsWifiUpdateSummaryOff" />
	<PreferenceCategory android:title="@string/prefsCategoryAdvancedTitle">
		<PreferenceScreen android:title="@string/prefsCatImportExportTitle"
			android:summary="@string/prefsCatImportExportSummary">
			<Preference android:title="@string/exportTitle"
				android:summary="@string/exportSummary" android:key="export" />
			<Preference android:title="@string/importTitle"
				android:summary="@string/importSummary" android:key="import" />
		</PreferenceScreen>
		<CheckBoxPreference android:key="debug"
			android:title="@string/prefsDebugTitle" android:summary="@string/prefsDebugSummary" />
	</PreferenceCategory>
</PreferenceScreen>
