<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/header"
		android:padding="4dip">
		<ImageView android:id="@+id/icon" android:src="@drawable/icon"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_centerVertical="false" android:layout_alignParentLeft="true"
			android:padding="4dip">
		</ImageView>
		<TextView android:id="@+id/title" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/appDescription"
			android:textSize="16sp" android:textStyle="bold"
			android:layout_alignParentTop="true" android:layout_toRightOf="@+id/icon"
			android:padding="2dip" android:shadowColor="#cccccc"
			android:shadowRadius="4">
		</TextView>
		<TextView android:id="@+id/content" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/appAuthor"
			android:textSize="14sp" android:layout_below="@+id/title"
			android:layout_alignLeft="@+id/title" android:padding="2dip">
		</TextView>
	</RelativeLayout>

	<ExpandableListView android:id="@+id/android:list"
		android:layout_width="fill_parent" android:layout_height="0dip"
		android:layout_weight="1" android:drawSelectorOnTop="false" />

	<LinearLayout android:id="@+id/android:empty"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center">
		<ProgressBar android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:indeterminateOnly="true"
			android:layout_gravity="center" />
		<TextView android:text="@string/appLoading" android:textSize="14sp"
			android:padding="4dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center" />
	</LinearLayout>
</LinearLayout>